# nysa

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/nysa-core/: Cargo.toml
crates/nysa-core/src/: app.rs  lib.rs
crates/nysa-core/src/auth/: linking.rs  mod.rs  provider.rs  rate_limit.rs  session.rs  token.rs
crates/nysa-core/src/compaction/: mod.rs
crates/nysa-core/src/config/: ai.rs  extensions.rs  mod.rs
crates/nysa-core/src/context/: mod.rs
crates/nysa-core/src/database/entities/: guild_config.rs  linking_code.rs  message.rs  mod.rs  session.rs  thread.rs  user.rs
crates/nysa-core/src/extension/: base.rs  context.rs  event.rs  factory.rs  manager.rs  mod.rs
crates/nysa-core/src/llm/: client.rs  conversation.rs  history.rs  mod.rs  prompt.rs  tokenizer.rs  types.rs
crates/nysa-core/src/prompt/: mod.rs
crates/nysa-core/src/tool/: definition.rs  mod.rs  registry.rs
crates/nysa-core/src/tool/builtin/: mod.rs  search.rs
crates/nysa-discord/: Cargo.toml
crates/nysa-discord/src/: lib.rs
crates/nysa-discord/src/commands/: auth.rs  compact.rs  mod.rs
crates/nysa-discord/src/handlers/: auth.rs  dm.rs  evaluate.rs  message.rs  mod.rs  proactive.rs  thread.rs
crates/nysa-discord/src/models/: mod.rs  user.rs
crates/nysa-discord/src/tools/: channel.rs  guild.rs  history.rs  mod.rs  profile.rs  reaction.rs  voice.rs
crates/nysa-discord/src/voice/: mod.rs
crates/nysa-sh/: Cargo.toml
crates/nysa-sh/src/: main.rs
