[workspace]
resolver = "2"
members = [
    "crates/nysa-core",
    "crates/nysa-sh",
    "crates/nysa-discord",
]

[workspace.dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
sea-orm = { version = "2.0.0-rc.36", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "schema-sync", "entity-registry"] }
anyhow = "1.0.102"
async-openai = "0.29"
reqwest = "0.12"
secrecy = "0.10"
nysa-core = { path = "crates/nysa-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
async-trait = "0.1"
tokio-util = "0.7"
futures = "0.3"
thiserror = "2.0"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
base58 = "0.2"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "http", "rustls_backend"] }
poise = "0.6"
once_cell = "1.19"
clap = { version = "4", features = ["derive"] }
