[package]
name = "nysa-sh"
version = "0.1.0"
edition = "2024"

[dependencies]
nysa-core = { workspace = true }
nysa-discord = { path = "../nysa-discord" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
